# astc_decomp

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  astc_decomp.pyx  setup.cfg  setup.py
.github/workflows/: python-package.yml
astc_dec/: astc_decomp.cpp
