[metadata]
name = astc_decomp
author = K0lb3
version = 1.0.1
url = https://github.com/K0lb3/astc_decomp/
download_url = https://github.com/K0lb3/astc_decomp/tarball/master
description = ASTC decoder for PIL
description-file = README.md
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: zlib/libpng License
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries :: Python Modules 


[flake8]
ignore = W191